test/shouldPass/expr/modInt.pas
program Sample;
var
  x, y: integer;
begin
  x := 20;
  y := 3;
  writeln(x mod y);
end.
