test/shouldFail/dupVarSameLine.pas
program Sample;
var
  b, b : integer;
//   ^
// Symbol 'b' is already declared in this scope

begin
  writeln(b);
end.
